src/test/contracts/negative/pattern_matching_anomalies/redundant_case/tx_w_ty.mligo
type p = One | Two

type t = (int * p)

let s (x : t) = 
  match x with
    (n, One) -> ()
  | _        -> ()
  | (n, Two) -> ()